--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "quasar dev",
-    "build": "quasar build"
+    "build": "quasar build -m spa"
   },
   "dependencies": {
     "axios": "^1.2.1",
